config/admission/report-admission-config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "report-validation"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   ["example.example.com"]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["reports"]
  validations:
    - expression: "object.metadata.namespace != 'kube-system'"
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "report-validation"
spec:
  policyName: "report-validation"
  validationActions: [Deny]
